# async-smtp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: transport_smtp.rs
examples/: send.rs  smtp.rs  smtp_gmail.rs  socks5.rs
src/: authentication.rs  codec.rs  commands.rs  error.rs  extension.rs  lib.rs  response.rs  runtime.rs  smtp_client.rs  stream.rs  types.rs  util.rs
src/file/: error.rs  mod.rs
src/sendmail/: error.rs  mod.rs
src/smtp/: commands.rs  error.rs  extension.rs  mod.rs  potential.rs  response.rs  smtp_client.rs  transport.rs
src/smtp/client/: codec.rs  inner.rs  mock.rs  mod.rs  net.rs
src/stub/: error.rs  mod.rs
tests/: skeptic.rs  transport_file.rs  transport_sendmail.rs  transport_smtp.rs  transport_stub.rs
