[package]

name = "async-smtp"
version = "2.0.0"
description = "SMTP client"
readme = "README.md"
homepage = "https://github.com/async-email/async-smtp"
repository = "https://github.com/async-email/async-smtp"
license = "Apache-2.0/MIT"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
categories = ["email"]
keywords = ["email", "smtp", "mailer"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "async-email/async-smtp" }
is-it-maintained-open-issues = { repository = "async-email/async-smtp" }

[dependencies]
pin-project = "1"
anyhow = "1"
async-native-tls = { version = "0.4", default-features = false }
async-std = { version = "1.11", features = ["unstable"], optional = true }
base64 = "^0.13"
bufstream = "^0.1"
futures = "0.3.21"
hostname = "0.3.1"
log = "^0.4"
nom = "^7.0"
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt", "time", "net"], optional = true }


[dev-dependencies]
env_logger = "^0.9"
glob = "^0.3"
criterion = "^0.3"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
tokio = { version = "1", features = ["fs", "rt", "time", "net", "macros"] }

[features]
default = [
  "runtime-tokio"
]

native-tls-vendored = ["async-native-tls/vendored"]
runtime-async-std = ["async-std", "async-native-tls/runtime-async-std"]
runtime-tokio = ["tokio", "async-native-tls/runtime-tokio"]
