[package]

name = "async-smtp"
version = "0.8.0"
description = "SMTP client"
readme = "README.md"
homepage = "https://github.com/async-email/async-smtp"
repository = "https://github.com/async-email/async-smtp"
license = "Apache-2.0/MIT"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
categories = ["email"]
keywords = ["email", "smtp", "mailer"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "async-email/async-smtp" }
is-it-maintained-open-issues = { repository = "async-email/async-smtp" }

[dependencies]
pin-project = "1"
anyhow = "1"
async-std = { version = "1.11", features = ["unstable"], optional = true }
base64 = "^0.13"
futures = "0.3.21"
hostname = "0.3.1"
log = "^0.4"
nom = "^7.0"
thiserror = "1"
tokio = { version = "1", features = ["time", "io-util"], optional = true }

[dev-dependencies]
env_logger = "^0.9"
glob = "^0.3"
criterion = "^0.3"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }

[[example]]
name = "send"
path = "examples/send.rs"
required-features = ["runtime-tokio"]

[features]
default = ["runtime-tokio"]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio"]
